--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
 	<div id="container">
 		<canvas id="game-canvas" data-pixel-art=""></canvas>
-		<script src="Build/Test.loader.js"></script>
+		<script src="Build/Santa-Candies.loader.js"></script>
 		<script>
 			var canvas = document.querySelector("#game-canvas");
 			var config =
 			{
-				dataUrl: "Build/Test.data",
-				frameworkUrl: "Build/Test.framework.js",
-				codeUrl: "Build/Test.wasm",
+				dataUrl: "Build/Santa-Candies.data",
+				frameworkUrl: "Build/Santa-Candies.framework.js",
+				codeUrl: "Build/Santa-Candies.wasm",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "MobileGTs",
 				productName: "Santa Candies",
